--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^11.0.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "next": "^16.0.7",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.15.0",
